unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_actualizacion_plan__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_actualizacion_plan__c</fullName>
    <label>Fecha de actualización plan</label>
    <type>Date</type>
</CustomField>