unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_Aprobacion_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Aprobacion_Plan_de_Venta__c</fullName>
    <formula>Fecha_Formalizacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Aprobación Re-Estructura</label>
    <type>Date</type>
</CustomField>