unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_Cancelacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Cancelacion__c</fullName>
    <label>Fecha de Cancelación</label>
    <type>Date</type>
</CustomField>