unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_creaci_n_del_proceso_de_venta__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creaci_n_del_proceso_de_venta__c</fullName>
    <formula>Oportunidad__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación del proceso de venta</label>
    <type>Date</type>
</CustomField>