unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion__c</fullName>
    <formula>CreatedDate</formula>
    <label>Fecha de creación</label>
    <type>DateTime</type>
</CustomField>