unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_Inicio_de_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Inicio_de_Cobranza__c</fullName>
    <description>Es la fecha a partir de la cual el cliente puede empezar a pagar.</description>
    <label>Fecha de Inicio de Pago</label>
    <type>Date</type>
</CustomField>