unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_de_Reubicacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Reubicacion__c</fullName>
    <label>Fecha de Reubicación</label>
    <type>Date</type>
</CustomField>