unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_DTU__c.field-meta.xml
<CustomField>
    <fullName>Fecha_DTU__c</fullName>
    <formula>Vivienda__r.Fecha_DTU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha DTU</label>
    <type>Date</type>
</CustomField>