unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Formalizacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Formalizacion__c</fullName>
    <formula>Oportunidad__r.Fecha_Formalizacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Formalización</label>
    <type>Date</type>
</CustomField>