unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Proyeccion_escritura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Proyeccion_escritura__c</fullName>
    <defaultValue>Today() + 30</defaultValue>
    <label>Fecha Proyección de escritura</label>
    <type>Date</type>
</CustomField>