unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Reestructura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reestructura__c</fullName>
    <label>Fecha Reestructura</label>
    <type>Date</type>
</CustomField>