unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reserva__c</fullName>
    <formula>Fecha_Reserva_Real__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Reserva</label>
    <type>Date</type>
</CustomField>