unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Reserva_Aux__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reserva_Aux__c</fullName>
    <label>Fecha Reserva Aux</label>
    <type>Date</type>
</CustomField>