unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Reserva_Real__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reserva_Real__c</fullName>
    <label>Fecha Reserva Real</label>
    <type>Date</type>
</CustomField>