unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fecha_Vencimiento_Final_Pagares__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Vencimiento_Final_Pagares__c</fullName>
    <formula>CASE(Frecuencia__c,
						&quot;Semanal&quot;, Fecha_de_Inicio_de_Cobranza__c + (7*Plazo__c),
						&quot;Quincenal&quot;, Fecha_de_Inicio_de_Cobranza__c + (7*Plazo__c*2),
						&quot;Mensual&quot;, Fecha_de_Inicio_de_Cobranza__c + (30*Plazo__c),
						Fecha_de_Inicio_de_Cobranza__c
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Vencimiento Final Pagares</label>
    <type>Date</type>
</CustomField>