unpackaged/main/default/objects/Plan_de_Venta__c/fields/Financiamiento_Enganche__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Enganche__c</fullName>
    <formula>OR(Plazo_Mayor_al_Autorizado__c, Prcnt_Financiamiento_Mayor_al_Autorizado__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financiamiento Enganche</label>
    <type>Checkbox</type>
</CustomField>