unpackaged/main/default/objects/Plan_de_Venta__c/fields/Financiamiento_Plan_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Financiamiento_Plan_de_Venta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financiamiento Plan de Venta</label>
    <type>Checkbox</type>
</CustomField>