unpackaged/main/default/objects/Plan_de_Venta__c/fields/FlowOverride__c.field-meta.xml
<CustomField>
    <fullName>FlowOverride__c</fullName>
    <label>FlowOverride</label>
    <type>DateTime</type>
</CustomField>