unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fondo_de_Garantia__c.field-meta.xml
<CustomField>
    <fullName>Fondo_de_Garantia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fondo de Garantía</label>
    <type>Checkbox</type>
</CustomField>