unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fondo_de_Garantia_No_Cubierto__c.field-meta.xml
<CustomField>
    <fullName>Fondo_de_Garantia_No_Cubierto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fondo de Garantía No Cubierto</label>
    <type>Checkbox</type>
</CustomField>