unpackaged/main/default/objects/Plan_de_Venta__c/fields/FormulaEvaluaPlanFinanciera__c.field-meta.xml
<CustomField>
    <fullName>FormulaEvaluaPlanFinanciera__c</fullName>
    <formula>CASE(Producto_Financiero__c, 
						&quot;BANJERCITO&quot;,&quot;1&quot;,
						&quot;BANJERCITO C/SUBSIDIO&quot;,&quot;1&quot;,
						&quot;BANSEFI&quot;,&quot;1&quot;,
						&quot;COFI INGRESOS ADICIONALES&quot;,&quot;2&quot;,
						&quot;COFINAVIT&quot;,&quot;2&quot;,
						&quot;COFINAVIT CONYUGAL&quot;,&quot;3&quot;,
						&quot;SOFOL C/SUBSIDIO&quot;,&quot;2&quot;,
						&quot;ALIA2&quot;,&quot;2&quot;,
						&quot;COFIFOVISSSTE&quot;,&quot;2&quot;,
						&quot;CON SUBSIDIO 2.6 VSM&quot;,&quot;1&quot;,
						&quot;CON SUBSIDIO 5 VSM&quot;,&quot;1&quot;,
						&quot;FOVISSSTE&quot;,&quot;1&quot;,
						&quot;FOVISSSTE PARA TODOS&quot;,&quot;2&quot;,
						&quot;INFONAVIT-FOVISSSTE&quot;,&quot;2&quot;,
						&quot;PENSIONA2&quot;,&quot;1&quot;,
						&quot;BAJOS INGRESOS&quot;,&quot;1&quot;,
						&quot;BAJOS INGRESOS C/SUBSIDIO 2.6&quot;,&quot;1&quot;,
						&quot;BAJOS INGRESOS C/SUBSIDIO 5 VS&quot;,&quot;1&quot;,
						&quot;BANSEFI C/SUBSIDIO 2.6 VSM&quot;,&quot;1&quot;,
						&quot;BANSEFI C/SUBSIDIO 5 VSM&quot;,&quot;1&quot;,
						&quot;CON BANSEFI&quot;,&quot;1&quot;,
						&quot;CONYUGAL&quot;,&quot;2&quot;,
						&quot;CONYUGAL C/SUBSIDIO 2.6 VSM&quot;,&quot;2&quot;,
						&quot;CONYUGAL C/SUBSIDIO 5 VSM&quot;,&quot;2&quot;,
						&quot;ECONOMICO&quot;,&quot;1&quot;,
						&quot;ECONOMICO C/SUBSIDIO 2.6 VSM&quot;,&quot;1&quot;,
						&quot;ECONOMICO C/SUBSIDIO 5 VSM&quot;,&quot;1&quot;,
						&quot;ROC&quot;,&quot;1&quot;,
						&quot;SEGUNDO CREDITO&quot;,&quot;1&quot;,
						&quot;SUBSIDIO IVSOP&quot;,&quot;1&quot;,
						&quot;TOTAL&quot;,&quot;1&quot;,
						&quot;TRADICIONAL&quot;,&quot;1&quot;,
						&quot;UNAMOS CREDITOS&quot;,&quot;2&quot;,
						&quot;ISSFAM&quot;,&quot;1&quot;,
						&quot;ISSSTELEON&quot;,&quot;1&quot;,
						&quot;PENSIONES DEL ESTADO&quot;,&quot;1&quot;,
						&quot;AUTOFIN CASA&quot;,&quot;1&quot;,
						&quot;BANCARIO&quot;,&quot;1&quot;,
						&quot;BANJERCITO&quot;,&quot;1&quot;,
						&quot;CAJA FLORENCIO ROSAS&quot;,&quot;1&quot;,
						&quot;CAJA POPULAR MEXICANA&quot;,&quot;1&quot;,
						&quot;CAJA POPULAR SAN PABLO&quot;,&quot;1&quot;,
						&quot;CAPREPOL&quot;,&quot;1&quot;,
						&quot;CFE&quot;,&quot;1&quot;,
						&quot;FHSSTE&quot;,&quot;1&quot;,
						&quot;FOVISSSTE PARA TODOS&quot;,&quot;2&quot;,
						&quot;IMSS&quot;,&quot;1&quot;,
						&quot;ISSSSPEA&quot;,&quot;1&quot;,
						&quot;PEMEX&quot;,&quot;1&quot;,
						&quot;SOFOL&quot;,&quot;1&quot;,
						&quot;SOFOL C/SUBSIDIO&quot;,&quot;1&quot;,
						&quot;0&quot;
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormulaEvaluaPlanFinanciera</label>
    <type>Text</type>
</CustomField>