unpackaged/main/default/objects/Plan_de_Venta__c/fields/Fraccionamiento_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento_Id_Formula__c</fullName>
    <formula>Oportunidad__r.Fraccionamiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento_Id_Formula</label>
    <type>Text</type>
</CustomField>