unpackaged/main/default/objects/Plan_de_Venta__c/fields/Frente_Parque__c.field-meta.xml
<CustomField>
    <fullName>Frente_Parque__c</fullName>
    <formula>Vivienda__r.Frente_Parque__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sobre Parque</label>
    <type>Checkbox</type>
</CustomField>