unpackaged/main/default/objects/Plan_de_Venta__c/fields/Gastos_de_Escritura_3__c.field-meta.xml
<CustomField>
    <fullName>Gastos_de_Escritura_3__c</fullName>
    <description>El usuario registrará el monto de gastos por escritura.</description>
    <label>Gastos de Escritura 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>