unpackaged/main/default/objects/Plan_de_Venta__c/fields/Gastos_Orig_Credito_1__c.field-meta.xml
<CustomField>
    <fullName>Gastos_Orig_Credito_1__c</fullName>
    <description>El usuario registrará el monto de gastos del crédito de acuerdo a la precalificación/simulación del cliente.</description>
    <label>Gastos Orig Crédito 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>