unpackaged/main/default/objects/Plan_de_Venta__c/fields/Hay_Rutas_Pendientes__c.field-meta.xml
<CustomField>
    <fullName>Hay_Rutas_Pendientes__c</fullName>
    <formula>IF(Rutas_de_Aprobacion_Pendientes__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hay Rutas Pendientes?</label>
    <type>Checkbox</type>
</CustomField>