unpackaged/main/default/objects/Plan_de_Venta__c/fields/Identificador_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Identificador_de_la_Cuenta__c</fullName>
    <formula>Oportunidad__r.Account.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificador de la Cuenta</label>
    <type>Text</type>
</CustomField>