unpackaged/main/default/objects/Plan_de_Venta__c/fields/Importe_Avaluo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Avaluo__c</fullName>
    <formula>Vivienda__r.Importe_del_Aval_o__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Avalúo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>