unpackaged/main/default/objects/Plan_de_Venta__c/fields/Importe_Condiciones_Especiales__c.field-meta.xml
<CustomField>
    <fullName>Importe_Condiciones_Especiales__c</fullName>
    <formula>Precio_Esquina__c + Precio_Sobre_Avenida__c + Precio_Frente_Parque__c + 
Precio_Lado_Sol__c  +  Precio_Lado_Sombra__c + Precio_Instalaciones__c +
Precio_Area_Municipal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Condiciones Especiales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>