unpackaged/main/default/objects/Plan_de_Venta__c/fields/Importe_del_Pago__c.field-meta.xml
<CustomField>
    <fullName>Importe_del_Pago__c</fullName>
    <formula>Diferencia_a_Pagar__c /  Plazo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe del Pago</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>