unpackaged/main/default/objects/Plan_de_Venta__c/fields/Importe_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Importe_Descuento__c</fullName>
    <formula>if ( Clase_de_Bonificacion__c=&quot;Porcentaje&quot;,
     Precio_Base_Vivienda__c * Descuento__c,
				if (ISNULL(Monto_Descuento__c), 0 , Monto_Descuento__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe del Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>