unpackaged/main/default/objects/Plan_de_Venta__c/fields/Importe_Descuento_Empleado_Javer__c.field-meta.xml
<CustomField>
    <fullName>Importe_Descuento_Empleado_Javer__c</fullName>
    <formula>Precio_Total_Vivenda__c * BLANKVALUE(Descuento_Empleado_Javer__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Descuento Empleado Javer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>