unpackaged/main/default/objects/Plan_de_Venta__c/fields/Impuestos_Derechos_1__c.field-meta.xml
<CustomField>
    <fullName>Impuestos_Derechos_1__c</fullName>
    <label>Impuestos/Derechos 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>