unpackaged/main/default/objects/Plan_de_Venta__c/fields/Instalaciones__c.field-meta.xml
<CustomField>
    <fullName>Instalaciones__c</fullName>
    <formula>Vivienda__r.Instalaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalaciones</label>
    <type>Checkbox</type>
</CustomField>