unpackaged/main/default/objects/Plan_de_Venta__c/fields/IsNew__c.field-meta.xml
<CustomField>
    <fullName>IsNew__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>