unpackaged/main/default/objects/Plan_de_Venta__c/fields/IsVRBypassed__c.field-meta.xml
<CustomField>
    <fullName>IsVRBypassed__c</fullName>
    <formula>BLANKVALUE(FlowOverride__c , $System.OriginDateTime) &gt; NOW() -0.00008101852</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVRBypassed</label>
    <type>Checkbox</type>
</CustomField>