unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lado_Sol__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sol__c</fullName>
    <formula>Vivienda__r.Lado_Sol__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lado Sol</label>
    <type>Checkbox</type>
</CustomField>