unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lado_Sombra__c.field-meta.xml
<CustomField>
    <fullName>Lado_Sombra__c</fullName>
    <formula>Vivienda__r.Lado_Sombra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lado Sombra</label>
    <type>Checkbox</type>
</CustomField>