unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lista_de_Precios_Financiamien_Reciente__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_Financiamien_Reciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios Financiamien - Reciente</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Plan de Venta (Lista de Precios Financiamien - Reciente)</relationshipLabel>
    <relationshipName>Plan_de_VentaWSRh</relationshipName>
    <type>Lookup</type>
</CustomField>