unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lista_de_Precios_Promo_Precio_Reciente__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_Promo_Precio_Reciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios Promo Precio - Reciente</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Plan de Venta (Lista de Precios Promo Precio - Reciente)</relationshipLabel>
    <relationshipName>Plan_de_Venta9</relationshipName>
    <type>Lookup</type>
</CustomField>