unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lista_de_Precios_RegalosMKT_Reciente__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_RegalosMKT_Reciente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios RegalosMKT - Reciente</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Plan de Venta (Lista de Precios RegalosMKT - Reciente)</relationshipLabel>
    <relationshipName>Plan_de_Venta4</relationshipName>
    <type>Lookup</type>
</CustomField>