unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lista_de_Precios_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_Precios_Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de Precios Vivienda</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Plan de Venta Vivienda</relationshipLabel>
    <relationshipName>Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>