unpackaged/main/default/objects/Plan_de_Venta__c/fields/Lote__c.field-meta.xml
<CustomField>
    <fullName>Lote__c</fullName>
    <formula>Vivienda__r.Lote__c</formula>
    <label>Lote</label>
    <type>Text</type>
</CustomField>