unpackaged/main/default/objects/Plan_de_Venta__c/fields/M2_Excedentes__c.field-meta.xml
<CustomField>
    <fullName>M2_Excedentes__c</fullName>
    <formula>Vivienda__r.Excendente_M2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M² Excedentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>