unpackaged/main/default/objects/Plan_de_Venta__c/fields/Modificacion_Automatica__c.field-meta.xml
<CustomField>
    <fullName>Modificacion_Automatica__c</fullName>
    <label>Modificación Automática</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>