unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_de_Credito_2__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Credito_2__c</fullName>
    <description>Es el importe de crédito de la precalificación/simulación que realiza el asesor al cliente cuando el trámite lleva una financiera adicional. Ejemplo: Cofinavit (donde Financiera 1 es de la institución de monto mayor y financiera 2 de monto de crédito menor). 
También este campo es utilizado para capturar los importes de un crédito conyugal cuando llevan una sola Institución financiera (Ejemplo: Financiera 1 se captura monto del titular, y Financiera 2 el crédito del cónyuge).</description>
    <label>Monto de Crédito 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>