unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_de_Credito_3__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Credito_3__c</fullName>
    <label>Monto de Crédito 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>