unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_de_Descuadre_VO__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Descuadre_VO__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monto de Descuadre VO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>