unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Monto_Descuento__c</fullName>
    <description>Sirve para que el usuario registre el monto que requiera para la venta</description>
    <label>Monto Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>