unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_Descuento_Pre_autorizado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Descuento_Pre_autorizado__c</fullName>
    <formula>trCalc_Monto_Desc_Preautorizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Descuento Pre-autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>