unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_Fin_Autorizado__c.field-meta.xml
<CustomField>
    <fullName>Monto_Fin_Autorizado__c</fullName>
    <formula>trCalc_Monto_Fin_Autorizado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Fin Autorizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>