unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_Total_Casa_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Monto_Total_Casa_Muestra__c</fullName>
    <label>Monto Total Casa Muestra</label>
    <summarizedField>Producto_de_Plan_de_Venta__c.Precio_Total__c</summarizedField>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>equals</operation>
        <value>Casa Muestra</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>