unpackaged/main/default/objects/Plan_de_Venta__c/fields/Monto_Total_de_Bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Monto_Total_de_Bonificacion__c</fullName>
    <formula>IF( TEXT(Lista_de_Precios_Bonificacion_Reciente__r.Tipo_de_Bonificacion__c) = &quot;Monto&quot;,
			      Lista_de_Precios_Bonificacion_Reciente__r.Monto_Bonificacion__c,
			      Lista_de_Precios_Bonificacion_Reciente__r.Porcentaje_Bonificacion__c *  Precio__c 
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Total de Bonificación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>