unpackaged/main/default/objects/Plan_de_Venta__c/fields/Motivo_Reubicaci_n__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Reubicaci_n__c</fullName>
    <label>Motivo Reubicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Por DTU</fullName>
            </value>
            <value>
                <fullName>Decisión del Cliente</fullName>
            </value>
            <value>
                <fullName>Tramitología</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>