unpackaged/main/default/objects/Plan_de_Venta__c/fields/Nombre_Compania__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Compania__c</fullName>
    <formula>Ubicacion_Compania__r.Nombre_de_la_Compania__c</formula>
    <label>Nombre Compañía</label>
    <type>Text</type>
</CustomField>