unpackaged/main/default/objects/Plan_de_Venta__c/fields/Nombre_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cliente__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot;&amp; Oportunidad__r.AccountId&amp; &quot;/view&quot;, 
IF(OR(Oportunidad__r.Account.RecordType.Name = &quot;PROSPECTO PERSONA MORAL&quot;, 
						Oportunidad__r.Account.RecordType.Name = &quot;AFLUENTE PERSONA MORAL&quot;,
						Oportunidad__r.Account.RecordType.Name = &quot;CLIENTE PERSONA MORAL&quot;),
	    	Oportunidad__r.Account.Name,
	     Oportunidad__r.Account.Nombre__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>