unpackaged/main/default/objects/Plan_de_Venta__c/fields/Num_Interior__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior__c</fullName>
    <formula>Vivienda__r.Num_Interior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Interior</label>
    <type>Text</type>
</CustomField>