unpackaged/main/default/objects/Plan_de_Venta__c/fields/Numero_Interior__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interior__c</fullName>
    <formula>Vivienda__r.Num_Interior__c</formula>
    <label>Número Interior</label>
    <type>Text</type>
</CustomField>