unpackaged/main/default/objects/Plan_de_Venta__c/fields/Numero_Interno__c.field-meta.xml
<CustomField>
    <fullName>Numero_Interno__c</fullName>
    <formula>Vivienda__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número Interno</label>
    <type>Text</type>
</CustomField>