unpackaged/main/default/objects/Plan_de_Venta__c/fields/Obra_Fisico__c.field-meta.xml
<CustomField>
    <fullName>Obra_Fisico__c</fullName>
    <formula>Vivienda__r.Porcentaje_Obra_Fisico__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Obra Fisico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>