unpackaged/main/default/objects/Plan_de_Venta__c/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proceso de Venta</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Plan de Venta</relationshipLabel>
    <relationshipName>Plan_de_Venta</relationshipName>
    <type>Lookup</type>
</CustomField>