unpackaged/main/default/objects/Plan_de_Venta__c/fields/Otros_Gastos_Count__c.field-meta.xml
<CustomField>
    <fullName>Otros_Gastos_Count__c</fullName>
    <label>Otros Gastos Count</label>
    <summaryFilterItems>
        <field>Producto_de_Plan_de_Venta__c.Tipo_de_Producto__c</field>
        <operation>equals</operation>
        <value>Otros Gastos</value>
    </summaryFilterItems>
    <summaryForeignKey>Producto_de_Plan_de_Venta__c.Plan_de_Venta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>